src/test/deca/syntax/invalid/objet/IncompleteSelection.deca
// missing IDENT at ';'
// Description : selection incomplète
// Resultat : erreur en ligne 6: la sélection doit avoir deux membres

{
    this. ;
}
